*Make Website Navigation Sticky (Resolve #8). Add script to build site for check-in.

--- a/doc/_includes/header.html
+++ b/doc/_includes/header.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="{{ site.url }}css/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="{{ site.url }}css/print.css" media="print">
 
+    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="{{ site.url }}js/main.js"></script>
+    
     <title>Space Battle Arena by Mikeware</title>
   </head>
 
