--- a/doc/_includes/header.html
+++ b/doc/_includes/header.html
@@ -4,12 +4,12 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}css/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}css/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/print.css" media="print">
 
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="{{ site.url }}js/main.js"></script>
+    <script src="{{ site.baseurl }}/js/main.js"></script>
     
     <title>Space Battle Arena by Mikeware</title>
   </head>
@@ -29,17 +29,20 @@
       </div>
     </header>
 
-	<nav>
-		<div class="container">
-			{% if page.title != "Home" %}
-			<span><a href="{{ site.url }}">Home</a></span>
-			{% endif %}
-			{% if page.nav %}
-				{% for item in page.nav %}
-					&nbsp<span><a href="{{ item.page }}">{{ item.title }}</a></span>
-				{% endfor %}
-			{% endif %}
-			<span>{{ page.title }}</span>
-		</div>
-	</nav>
-	
+    <nav>
+        <div class="container">
+            {% if page.title != "Home" %}
+            <span><a href="{{ site.baseurl }}/index.html">Home</a></span>
+            {% endif %}
+            {% if page.layout == "post" %}
+            <span><a href="{{ site.baseurl }}/news.html">News</a></span>
+            {% endif %}
+            {% if page.nav %}
+                {% for item in page.nav %}
+                    &nbsp<span><a href="{{ item.page }}">{{ item.title }}</a></span>
+                {% endfor %}
+            {% endif %}
+            <span>{{ page.title }}</span>
+        </div>
+    </nav>
+    
