--- a/doc/_layouts/post.html
+++ b/doc/_layouts/post.html
@@ -4,7 +4,10 @@
 
     <div class="container">
       <section id="main_content">
-        {{content}}
+        <h1>{{ page.title }}</h1>
+        <p>- {{ page.date | date_to_long_string }}</p>
+
+        {{ content }}
       </section>
     </div>
 
