* Add Sidebar Outlines and Sticky Sidebar. (Resolves #9)

--- a/doc/_includes/header.html
+++ b/doc/_includes/header.html
@@ -39,7 +39,7 @@
             {% endif %}
             {% if page.nav %}
                 {% for item in page.nav %}
-                    &nbsp<span><a href="{{ item.page }}">{{ item.title }}</a></span>
+                    &nbsp<span><a href="{{ item.url }}">{{ item.title }}</a></span>
                 {% endfor %}
             {% endif %}
             <span>{{ page.title }}</span>
