--- a/doc/_layouts/home.html
+++ b/doc/_layouts/home.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 
-    {% include outline.html %}
+    {% include topnews.html %}
 
     <div class="container">
       <section id="main_content">
