--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -182,6 +182,8 @@ section img {
     padding-bottom: 8px;
 }
 
+#main_content thead th:first-child { width: 25%; }
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
