Add java doc links to readme and top of site for #67.

--- a/doc/css/stylesheet.css
+++ b/doc/css/stylesheet.css
@@ -46,6 +46,11 @@ body {
     }
 }
 
+.headercontainer {
+  width: 90%;
+  margin: 0 auto 0 4em;
+}
+
 section {
   display: block;
   margin: 0 0 20px 0;
