--- a/doc/_includes/header.html
+++ b/doc/_includes/header.html
@@ -17,12 +17,13 @@
   <body>
 
     <header>
-      <div class="container">
+      <div class="headercontainer">
         <h1>Space Battle Arena</h1>
         <h2>A Programming Game in Java for AP CS Students.</h2>
 
         <section id="downloads">
           <a href="{{ site.githuburl }}/blob/master/bin/SpaceBattle.jar?raw=true" class="btn">Download Client Jar</a>
+          <a href="{{ site.baseurl }}/client/java_doc/" class="btn">Java Docs</a>
           <a href="{{ site.githuburl }}/blob/master/bin/SBAserver.zip?raw=true" class="btn">Download Server (Windows)</a>
           <a href="{{ site.githuburl }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
