--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,11 +10,11 @@ body {
 
 /* General & 'Reset' Stuff */
 
-@media all and (max-width: 1023px) and (min-width: 0px) {
+@media all and (max-width: 1024px) and (min-width: 0px) {
    .container {
       width: 90%;
-      max-width: 600px;
-      margin: 0 auto;
+      max-width: 640px;
+      margin: 0 auto 0 4em;
     }
 
     aside {
@@ -22,15 +22,15 @@ body {
     }
 }
 
-@media all and (max-width: 1899px) and (min-width: 1024px) {
+@media all and (max-width: 1899px) and (min-width: 1025px) {
    .container {
       width: 90%;
-      max-width: 800px;
-      margin: 0 auto;
+      max-width: 750px;
+      margin: 0 auto 0 4em;
     }
 
     aside {
-      width: 300px;
+      width: 250px;
     }
 }
 
@@ -38,12 +38,17 @@ body {
    .container {
       width: 90%;
       max-width: 1100px;
-      margin: 0 auto;
+      margin: 0 auto 0 4em;
     }
 
     aside {
       width: 300px;
     }
+}
+
+.headercontainer {
+  width: 90%;
+  margin: 0 auto 0 4em;
 }
 
 section {
@@ -142,7 +147,7 @@ nav span:before {
 */
 
 aside {
-  float: left;
+  float: right;
   background: #222;
   border: 5px solid #444;
   padding: 5px 15px;
@@ -153,6 +158,8 @@ aside {
   z-index: 100;
   position: fixed;
   top: 64px;
+  right: 0;
+  opacity: 0.5;
 }
 
 aside .small {
