--- a/doc/_layout.cshtml
+++ b/doc/_layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
+    <link rel="shortcut icon" href="@(Context.Settings[Keys.LinkRoot])/favicon.ico">
+
     <link rel="stylesheet" type="text/css" href="@(Context.Settings[Keys.LinkRoot])/css/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="@(Context.Settings[Keys.LinkRoot])/css/pygment_trac.css" media="screen">
 
