[Doc] Update Docs with latest changes to lessons, release path fix, and new VS Code Instructions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,11 @@
 <aside>
     <h1>News</h1>
     <ul>
+        <li><a href="/SpaceBattleArena/2019/10/14/New-Site">Wyam! New Site (sort of)</a>
+            <br/>
+            <span class="small">We&#x27;re now using Wyam to generate the site.                
+            <br/>- 14 October 2019</span><br/><br/>
+        </li>
         <li><a href="/SpaceBattleArena/2018/04/28/Season-7-Kickoff">TEALS Season 7 Kickoff</a>
             <br/>
             <span class="small">Season 7 TEALS Tournament Kickoff.                
@@ -51,11 +56,6 @@
             <br/>
             <span class="small">Season 6 HotFix 2 Release.                
             <br/>- 04 June 2017</span><br/><br/>
-        </li>
-        <li><a href="/SpaceBattleArena/2017/05/14/v1.2.0.1126-Release">v1.2.0.1126 Release</a>
-            <br/>
-            <span class="small">Season 6&#x27;s Bauble Hunt Release.                
-            <br/>- 14 May 2017</span><br/><br/>
         </li>
     </ul>
     
