--- a/assets/sass/ie9.css
+++ b/assets/sass/ie9.css
@@ -1,8 +1,4 @@
-/*
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+/* Solid State by HTML5 UP html5up.net | @ajlkn Free for personal and commercial use under the CCA 3.0 license (html5up.net/license) */
 /* Basic */
 body { background-color: #2e3141; background-size: cover; background-attachment: fixed; background-position: center; }
 
