--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1350,11 +1350,7 @@
 
 .sr-only-focusable:active, .sr-only-focusable:focus { position: static; width: auto; height: auto; margin: 0; overflow: visible; clip: auto; }
 
-/*
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+/* Solid State by HTML5 UP html5up.net | @ajlkn Free for personal and commercial use under the CCA 3.0 license (html5up.net/license) */
 /* Reset */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
 
@@ -1759,7 +1755,7 @@ body { -ms-overflow-style: scrollbar; }
 
 @media screen and (max-width: 640px) { html, body { min-width: 320px; } }
 
-body { background-color: #2e3141; background-size: auto, cover; background-attachment: fixed, fixed; background-position: center, center; }
+body { background-color: #2e3141; background-size: auto, cover; background-attachment: fixed, fixed; background-position: center, center; }
 
 body.is-loading *, body.is-loading *:before, body.is-loading *:after { -moz-animation: none !important; -webkit-animation: none !important; -ms-animation: none !important; animation: none !important; -moz-transition: none !important; -webkit-transition: none !important; -ms-transition: none !important; transition: none !important; }
 
@@ -2183,7 +2179,7 @@ body.is-menu-visible #menu .inner { -moz-transform: translateY(0); -webkit-trans
 
 #banner p { -moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease, -moz-filter 0.25s ease; -webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease, -webkit-filter 0.25s ease; -ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease, -ms-filter 0.25s ease; transition: opacity 0.5s ease, transform 0.5s ease, filter 0.25s ease; -moz-transform: translateX(0); -webkit-transform: translateX(0); -ms-transform: translateX(0); transform: translateX(0); -moz-transition-delay: 0.8s; -webkit-transition-delay: 0.8s; -ms-transition-delay: 0.8s; transition-delay: 0.8s; -moz-filter: blur(0); -webkit-filter: blur(0); -ms-filter: blur(0); filter: blur(0); opacity: 1; font-family: Raleway, Helvetica, sans-serif; font-size: 1em; font-weight: 200; letter-spacing: 0.1em; line-height: 2; text-transform: uppercase; }
 
-@media screen and (max-width: 1280px) { #banner { padding: 7em 0 8.25em 0 ; background-color: #2e3141; background-size: auto, cover; background-position: center, center; margin-bottom: -6.5em; } }
+@media screen and (max-width: 1280px) { #banner { padding: 7em 0 8.25em 0 ; background-color: #2e3141; background-size: auto, cover; background-position: center, center; margin-bottom: -6.5em; } }
 
 @media screen and (max-width: 980px) { #banner { padding: 12em 3em 12.375em 3em ; margin-bottom: -4.75em; }
   #banner .inner { width: 100%; } }
@@ -2209,12 +2205,12 @@ body.is-loading #banner p { opacity: 0; -moz-transform: translateX(0.5em); -webk
 
 #wrapper > header p { font-family: Raleway, Helvetica, sans-serif; font-size: 1em; font-weight: 200; letter-spacing: 0.1em; line-height: 2; text-transform: uppercase; }
 
-@media screen and (max-width: 1280px) { #wrapper > header { padding: 9em 0 6.25em 0 ; background-color: #2e3141; background-size: auto, cover; background-position: center, 0% 30%; margin-bottom: -6.5em; } }
+@media screen and (max-width: 1280px) { #wrapper > header { padding: 9em 0 6.25em 0 ; background-color: #2e3141; background-size: auto, cover; background-position: center, 0% 30%; margin-bottom: -6.5em; } }
 
-@media screen and (max-width: 980px) { #wrapper > header { padding: 11em 3em 7.375em 3em ; background-size: auto, cover; background-position: center, 0% 0%; margin-bottom: -4.75em; }
+@media screen and (max-width: 980px) { #wrapper > header { padding: 11em 3em 7.375em 3em ; background-size: auto, cover; background-position: center, 0% 0%; margin-bottom: -4.75em; }
   #wrapper > header .inner { width: 100%; } }
 
-@media screen and (max-width: 736px) { #wrapper > header { padding: 6.5em 2em 3em 2em ; background-size: auto, 125%; margin-bottom: -2.5em; }
+@media screen and (max-width: 736px) { #wrapper > header { padding: 6.5em 2em 3em 2em ; background-size: auto, 125%; margin-bottom: -2.5em; }
   #wrapper > header h2 { font-size: 1.25em; }
   #wrapper > header p { font-size: 0.8em; } }
 
@@ -2377,7 +2373,7 @@ body.is-loading #banner p { opacity: 0; -moz-transform: translateX(0.5em); -webk
 
 #footer .inner .copyright li a { color: inherit; }
 
-@media screen and (max-width: 1280px) { #footer { background-color: #2e3141; background-size: auto, cover; background-position: center, center; margin-top: -6.5em; padding-top: 6.5em; } }
+@media screen and (max-width: 1280px) { #footer { background-color: #2e3141; background-size: auto, cover; background-position: center, center; margin-top: -6.5em; padding-top: 6.5em; } }
 
 @media screen and (max-width: 980px) { #footer { margin-top: -4.75em; padding-top: 4.75em; }
   #footer .inner { padding: 3em 3em 1em 3em ; display: block; width: 100%; }
