[Doc] Add info about new tournament and sponsorship

--- a/doc/_includes/header.cshtml
+++ b/doc/_includes/header.cshtml
@@ -8,6 +8,7 @@
           <a href="@(Context.Settings[Keys.LinkRoot])/client/java_doc/" class="btn">Java Docs</a>
           <a href="@(Context.Settings["SBA.ReleasePath"])/SBAserver.zip" class="btn">Download Server (Windows)</a>
           <a href="@(Context.Settings["SBA.GitHub"])" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a style="position: relative; top: 6px;" href="https://github.com/sponsors/hawkerm"><img src="https://img.shields.io/static/v1?label=Sponsor&message=%E2%9D%A4&logo=GitHub"/></a>
         </section>
       </div>
     </header>
